@@ -3,3 +3,9 @@ CHECK_LIBRARY_EXISTS (socket bind "" HAVE_LIBSOCKET)
 IF (HAVE_LIBSOCKET)
   USE_LIBRARY (socket)
 ENDIF (HAVE_LIBSOCKET)
+
+CHECK_LIBRARY_EXISTS (nsl gethostbyaddr "" HAVE_LIBNSL)
+
+IF (HAVE_LIBNSL)
+  USE_LIBRARY (nsl)
+ENDIF (HAVE_LIBNSL)
